# Profiteer-IO

./: .gitignore  LICENSE  README.md
.github/workflows/: pr-tests.yaml
backend/: .header-config.txt  main.py  pyproject.toml
backend/app/api/v1/: __init__.py  catalog.py  dashboard.py  prediction.py  sales.py
backend/app/models/: catalog.py  common.py  dashboard.py  prediction.py  sales.py
backend/app/utils/auth/: middlewares.py
backend/app/utils/catalog/: queries.py  utils.py
backend/app/utils/dashboard/: queries.py  utils.py
backend/app/utils/data/: data_source.py
backend/app/utils/exceptions/: errors.py  handler.py  logger.py
backend/app/utils/prediction/: __init__.py  queries.py  utils.py
backend/app/utils/sales/: synthesise.py
backend/app/utils/settings/: config.py
devops/: Dockerfile.backend  Dockerfile.frontend
devops/helm/: Chart.yaml  values.yaml
devops/helm/templates/: backend.yaml  frontend.yaml  mindsdb.yaml
frontend/: .dockerignore  index.html  package-lock.json  package.json
frontend/src/: app.tsx  main.tsx
frontend/src/api/: axios.ts
frontend/src/api/hooks/: catalog.ts  dashboard.ts  product.ts
frontend/src/assets/styles/: index.css
frontend/src/components/categorycard/: categorycard.styles.css  categorycard.tsx
frontend/src/components/dropdown/: dropdown.styles.css  dropdown.tsx
frontend/src/components/hotproductcard/: hotproductcard.styles.css  hotproductcard.tsx
frontend/src/components/layout/: layout.styles.css  layout.tsx
frontend/src/components/loading/: loading.styles.css  loading.tsx
(+26 files in other folders)
