[tool.poetry]
name = "ProfiteerIO"
version = "1.0.0"
description = ""
authors = [
    "Niyas Hameed <niyasrad@gmail.com>",
    "Vaishnavi M R <vaishnavimr2403@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
httpx = "^0.27.0"
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.1"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = '''
/(
    \.venv
    |\.mypy_cache
    |\.pytest_cache
    |\.tox
    |\.vscode
)/
'''

[tool.isort]
profile = "black"
